--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -92,7 +92,8 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
 
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="x_panel">
+         <div class="Loader" *ngIf='loading' >Loading...</div>
+        <div class="x_panel" *ngIf='!loading'>
           <div class="x_title">
             <h2>{{questions?.length}} Questions
               <span *ngIf='answerId'>from Answer Nº{{answerId}}</span>
