--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
               <h3>General</h3>
               <ul class="nav side-menu">
                 <li [class.current-page]="url == '/questions'" ><a  (click)="setUrl('/questions')" routerLink="/questions" ><i class="fa fa-question"></i> Questions </a></li>
+                <li [class.current-page]="url == '/views'"><a  (click)="setUrl('/views')" routerLink="/views" ><i class="fa fa-search"></i>Views</a></li>
                 <li [class.current-page]="url == '/users'"><a  (click)="setUrl('/users')" routerLink="/users" ><i class="fa fa-users"></i>Users</a></li>
                 <li [class.current-page]="url == '/visitors'"><a (click)="setUrl('/visitors')" routerLink="/visitors"><i class="fa fa-flag-checkered"></i> Visitors</a></li>
                 <li [class.current-page]="url == '/topanswers'"><a (click)="setUrl('/topanswers')" routerLink="/topanswers" ><i class="fa fa-level-up"></i> Top Answers</a></li>
