--- a/src/app/questions/questions.component.css
+++ b/src/app/questions/questions.component.css
@@ -12,14 +12,13 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
 }
 
 /* Position the content inside the overlay */
 .overlay-content {
-    margin-top: 6rem;
+    margin: 6rem 0;
     width: 80%; 
     text-align: left;
     background: #F5F7FA;
