--- a/src/app/answers/answers.component.html
+++ b/src/app/answers/answers.component.html
@@ -31,7 +31,7 @@
                     <tbody>
                       <tr class="even pointer" *ngFor="let answer of answers">
                         <td class=" ">{{answer.id}}</td>
-                        <td class=" ">{{answer.subject}}</td>
+                        <td class=" ">{{answer.question}}</td>
                         <td class=" last" *ngIf="isAdmin()">
                           <a routerLink="/answer/{{answer.id}}">Edit</a>
                         </td>
