--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -53,16 +53,16 @@
   <div class="modal fade video-dialog" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
             </button>
             <h4 class="modal-title" id="myModalLabel2" *ngIf="video && video.id==null">New Video</h4>
             <h4 class="modal-title" id="myModalLabel2" *ngIf="video && video.id!=null">Edit Video {{video.id}}</h4>
+            
           </div>
           <form class="form-horizontal form-label-left" novalidate >
             <div class="modal-body">
-          
+                <app-message></app-message>
                   <div class="item form-group">
                     <label class="control-label col-md-2 col-sm-2 col-xs-12" for="video">Number
                       <span class="required">*</span>
