--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -187,7 +187,7 @@
 
 
           <div class="tab-pane active" id="home">
-            <p class="lead">{{question.answer.number}} - {{question.answer.question}}</p>
+            <p class="lead">{{question.answerId}} - {{question.answer.question}}</p>
 
             <p [innerHTML]='question.answer.content'></p>
             
