--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
       <!-- footer content -->
       <footer *ngIf="isLogin()">
         <div class="pull-right">
-          Ask Alien Console by Muniz 2017
+          Ask Alien Console by Muniz 2017 v2.0
         </div>
         <div class="clearfix"></div>
       </footer>
